styles/style.css
@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Serif:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Ultra&display=swap');

*,
*::before,
*::after {
	padding: 0;
	margin: 0;
	box-sizing: border-box;
}

body {
	font-family: "IBM Plex Serif", serif;
  	font-weight: 400;
  	font-style: normal;

	/* Foto de background de Ivana Cajina na Unsplash */
	background: url("../img/bg.webp") no-repeat center center;
	background-size: cover;
	backdrop-filter: blur(5px);
}

a {
	color: #fff;
	text-decoration: none;
	transition: 0.3s;
	text-align: center;
}

a:hover {
	cursor: pointer;
	opacity: 0.7;
}

h1, h3, p {
	color: #fff;
}

span {
	/* Globally defines the color of the span tag. */
	color: crimson;
}

/* Liquid Glass Effect */

.liquid-glass {
	/* From https://css.glass */
	background: rgba(0, 0, 0, 0.2);
	border-radius: 16px;
	box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
	backdrop-filter: blur(5px);
	-webkit-backdrop-filter: blur(5px);
	border: 1px solid rgba(0, 0, 0, 0.3);
}

/* Header Styles */
.header {
	display: flex;
	justify-content: space-around;
	align-items: center;
	
	/* Liquid glass border adjustment */
	border-radius: 0 0 16px 16px;
	
	height: 8vh;
	font-size: 1.2rem;
}

.logo {
	font-family: "Ultra", serif;
	font-weight: 400;
	font-style: normal;

	font-size: 2.5rem;
	text-transform: uppercase;
	letter-spacing: .25rem;
}

.logo a {
	color: green;
}

.nav-list {
	list-style: none;
	display: flex;
}

.nav-list li {
	letter-spacing: 3px;
	margin-left: 32px;
}

.mobile-menu {
	display: none;
	cursor: pointer;
}

.mobile-menu div {
	width: 32px;
	height: 2px;
	background: #fff;
	margin: 8px;
}

.active {
	color: green;
}

/* Container Styles */
.container {
	max-width: 90%;
	margin: 0 auto;
}

.hero {
	height: 55vh;
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;
	text-align: center;
}

.hero h1 {
	font-size: 3rem;
	margin-bottom: 2rem;
}

/* Footer Styles */
.footer {
	display: flex;
	justify-content: space-around;
	align-items: center;
	
	/* Liquid glass border adjustment */
	border-radius: 16px 16px 0 0;
	
	height: 8vh;
	color: #fff;
	text-transform: capitalize;
	font-size: 1rem;
}

.social-network {
	list-style: none;
	display: flex;
}

.social-network li {
	letter-spacing: 3px;
	margin-left: 32px;
}

.footer img {
	height: 3.2vh;
	width: 1.25vw;
	filter: brightness(0) invert(1);
}

/* Media Queries */
@media(max-width: 1080px) {
	.container {
		padding: 0 5%;
	}
}

@media (max-width: 999px) {
	body {
		overflow-x: hidden;
	}

	.container {
		position: relative;
		z-index: -1;
	}

	.nav-list {
		position: absolute;
		top: 8vh;
		right: 0;
		width: 50vw;
		height: 92vh;
		/* background: #23232e; */

		/* From https://css.glass */
		background: rgba(35, 35, 46, 0.8);
		border-radius: 16px;
		box-shadow: 0 4px 30px rgba(0, 0, 0, 0.4);
		backdrop-filter: blur(5px);
		-webkit-backdrop-filter: blur(5px);
		border: 1px solid rgba(0, 0, 0, 0.3);

		flex-direction: column;
		align-items: center;
		justify-content: space-around;
		transform: translateX(100%);
		transition: transform 0.3s ease-in;
	}

	.nav-list li {
		margin-left: 0;
		opacity: 0;
	}

	.mobile-menu {
		display: block;
		z-index: 10;
	}
}

@media(max-width: 700px) {
	body {
		font-size: 1.2rem;
	}

	.hero h1,
	.logo {
		font-size: 2rem;
	}

	.card {
		display: block;
	}
}

.nav-list.active {
	transform: translateX(0);
}

@keyframes navLinkFade {
	from {
		opacity: 0;
		transform: translateX(50px);
	}
	to {
		opacity: 1;
		transform: translateX(0);
	}
}

.mobile-menu.active .line1 {
	transform: rotate(-45deg) translate(-8px, 8px);
}

.mobile-menu.active .line2 {
	opacity: 0;
}

.mobile-menu.active .line3 {
	transform: rotate(45deg) translate(-5px, -7px);
}

